    remctl protocol, which is more robust than the kpasswd protocol when
    password changes can take some time.  This can be configured via the
    new webauth_krb5_change_config function.  The remote remctl server
    must provide a command and subcommand that takes a single argument,
    the new password, and changes the password for the authenticated
    principal that sent the command.

    Set the correct template variable when the code field is left blank on
    the WebLogin multifactor form.

    Map unknown realm and invalid principal errors during Kerberos
    authentication in mod_webkdc to WA_PEC_USER_REJECTED instead of a
    generic Kerberos error.  This will display a more accurate error
    message to the user of WebLogin instead of a generic internal error
    message.

    Correct a bug in the workaround for parsing of invalid XML from the
    WebKDC in WebLogin that caused it to not be effective.

    Log a more detailed error message on WebAuth exceptions during
    WebLogin password change.

    Fix configure probes for OpenSSL on platforms without transitive
    shared library dependencies.

    Update to C TAP Harness 2.4:

    * Add new diag_file_add and _remove API to the C TAP library.
    * Add new test_cleanup_register API to the C TAP library.
    * Suppress lazy plans and test summaries if the test failed with bail.
    * Add warn_unused_result gcc attributes to relevant functions.

WebAuth 4.5.5 (2013-08-28)

    Fix replay detection in WebLogin to use the same memcached object
    naming convention when registering authentications and when checking
    for a previous authentication.

    If the login is rejected by the user information service, WebLogin now
    displays a more specific error instead of the generic "something went
    wrong" error page.

    If a multifactor authentication is rejected by the validation service,
    the user is now returned to the multifactor authentication screen and